Chart & downloaded image alignments fixed

--- a/static/react/src/assets/css/c3.css
+++ b/static/react/src/assets/css/c3.css
@@ -211,7 +211,7 @@
  stroke: #a1a1a1;
 }
 .c3 svg .c3-title{
-	font-size:15px;
-	fill:#848484 !important;
+	font-size:17px;
+	fill:#6f6f6f !important;
 	/* font-family: 'Quicksand', sans-serif;*/
 }
