--- a/static/react/src/assets/css/style.css
+++ b/static/react/src/assets/css/style.css
@@ -20026,7 +20026,6 @@ div.pred_disp_block p,
   border: none;
 }
 .box-shadow {
-  padding-bottom: 20px;
   border-top: 1px solid #f5f5f5;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
@@ -21767,7 +21766,7 @@ div.text-center.tbl_th_center th {
 .c3-axis-x text {
   fill: #333333;
   /*font-family: "Times New Roman", Times, serif;;*/
-  font-size: 11px;
+  font-size: 12px;
 }
 .c3-axis-y2 text {
   fill: #333333;
@@ -23115,4 +23114,7 @@ min-width: 102px; }
 }
 .modelTitle{
   text-align: left !important;
+}
+.viewChartPopup.modal-body{
+  padding: 10px 20px 20px 20px;
 }
